# tree-sitter-just

./: .clang-tidy  .editorconfig  .eslintrc.js  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .prettierignore  CMakeLists.txt  Cargo.toml  GRAMMAR.md  Makefile  Package.resolved  Package.swift  README.md  binding.gyp  build-flavored-queries.py  build-queries-nvim.py  debug.c  deno.jsonc  eslint.config.mjs  flake.nix  go.mod  grammar.js  justfile  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yaml  fuzz.yaml
bindings/: debug.c  fuzz.c
bindings/c/: tree-sitter-just.pc.in
bindings/c/tree_sitter/: tree-sitter-just.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_just/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJustTests/: TreeSitterJustTests.swift
ftdetect/: just.vim
fuzzer/: build-corpus.py  entry.c
lua/tree-sitter-just/: init.lua
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  textobjects.scm
queries-flavored/helix/: highlights.scm  indents.scm  injections.scm  locals.scm  textobjects.scm
queries-flavored/lapce/: folds.scm  highlights.scm  injections.scm  textobjects.scm
queries-flavored/nvim-next/: highlights.scm  indents.scm  injections.scm  locals.scm  textobjects.scm
queries-flavored/zed/: highlights.scm  indents.scm  injections.scm  locals.scm  textobjects.scm
queries-src/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  textobjects.scm
queries/just/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  textobjects.scm
script/: parse-examples
scripts/: ci-nvim-init.vim
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/: crash-4b0422bb457cd6b39d1f8549f6739830254718a0z-assertion  issue69-segfault.just  readme.just  test.just  timeout-1aa6bf37e914715f4aa49e6cf693f7abf81aaf8e
test/corpus/: delimited.txt  injections.txt  multiline.txt  newlines.txt  recipes.txt  statements.txt
test/highlight/: crash-assertion-simplified.just  injections-global-pwsh.just  injections-global-py.just  injections.just  invalid-syntax.just  multiline.just  recipes.just  statements.just
